# tww-bb

./: BbParameters.cpp  BbParameters.h  CMakeLists.txt  LICENSE  LowerBoundGraph.cpp  LowerBoundGraph.h  MemoryAwareCache.h  README.md  graph.h  lower_bounds.h  main.cpp  sat_encoding.h  sat_structure.h  tools.cpp  tools.h  tww.h  twwbb2.cpp  twwbb2.h  upper_bounds.h
cadical/: solver.cpp  version.cpp
nauty2_8_6/: CMakeLists.txt  naukiss64.c  nauty.h
